--- a/Image_Classification_with_CNN.ipynb
+++ b/Image_Classification_with_CNN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Image_Classification_with_CNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQt6MPF9Hrxl8nzNvngiFb",
+      "authorship_tag": "ABX9TyNhAy0ec03IJfTpLqf8o1oh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -854,10 +854,10 @@
         "\n",
         "  model.add(keras.layers.AveragePooling2D(6,3, input_shape=(300,300,1)))\n",
         "  \n",
-        "  # model.add(keras.layers.Conv2D(64, 3, activation='relu'))\n",
-        "  # model.add(keras.layers.Conv2D(32, 3, activation='relu'))\n",
-        "  for i in range(hp.Int(\"Conv layers\", min_value=0, max_value=3)): # Test between 0-3 conv layers, for each layer the number of filters used (i.e [16,32,64])\n",
-        "    model.add(keras.layers.Conv2D(hp.Choice(f\"layer_{i}_filters\", [16,32,64], 3, activation='relu')))\n",
+        "  model.add(keras.layers.Conv2D(64, 3, activation='relu'))\n",
+        "  model.add(keras.layers.Conv2D(32, 3, activation='relu'))\n",
+        "  # for i in range(hp.Int(\"Conv layers\", min_value=0, max_value=3)): # Test between 0-3 conv layers, for each layer the number of filters used (i.e [16,32,64])\n",
+        "  #  model.add(keras.layers.Conv2D(hp.Choice(f\"layer_{i}_filters\", [16,32,64], 3, activation='relu')))\n",
         "\n",
         "  model.add(keras.layers.MaxPool2D(2,2))\n",
         "  model.add(keras.layers.Dropout(0.5))\n",
